--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="no" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>IT</title>
+    <title>Datateknologi</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
 <body>
@@ -15,18 +15,26 @@
         <h1><img src="bilde/logo.png" alt="" width="120" height="120" style=""> Datateknologi</h1>
       </div>
       <div class="links">
-        <a href="">Hjem</a>
-        <a href="it2.html">test1</a>
-        <a href="it3.html">test2</a>
-        <a href="it4.html">test3</a>
+        <a href="index.html">Hjem</a>
+        <a href="it4.html">Binære tal</a>
+        <a href="it3.html">Teiknsett</a>
+        <a href="it2.html">Datamaskina</a>
       </div>
     </header>
 
     <main>
+        <img style="margin-top: 100px; margin-left: 30px;"src="bilde/forside.jpg" height="200" width="400">
       <div class="grid-container">
-        <p>pcgay </p>
 
 
+
+
+        <p style=" margin-top: 100px; max-width: 300px; margin-left: 100px; margin-right: 300px; background-color: whitesmoke; z-index: 5; box-shadow: 3px 3px 2px 2px lightgray; padding: 10px;">Nåtidens samfun går mei og meir mot teknologi og det å kunne kode kan vere svert nyttig.
+          I framtida kjem manga arbeidsplassar til å varte erstatta med robotar.
+          Men koding er noko ein kjem til å få brukt for i frammtida, så det å lære seg å kode er ein smart avgjerelse.
+          Det er praktisk å vita kva som eigentleg skjer inne i datamaskinar.
+          Kva delar som er inne i ein pc og kva som eigentleg skjer der inne.
+          På denne nettsida skal eg lære deg litt om kva som skjer inne i datamaskinar.</p>
       </div>
     </main>
 
