--- a/it2.html
+++ b/it2.html
@@ -2,10 +2,47 @@
 <html lang="no" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Inormasjon</title>
+    <title>Datamaskina</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>
+<body>
+
+
+    <header>
+
+      <div class="" style="display: flex; flex-direction: row;">
+
+        <h1><img src="bilde/logo.png" alt="" width="120" height="120" style=""> Datateknologi</h1>
+      </div>
+      <div class="links">
+        <a href="index.html">Hjem</a>
+        <a href="it4.html">Binære tal</a>
+        <a href="it3.html">Teiknsett</a>
+        <a href="it2.html">Datamaskina</a>
+      </div>
+    </header>
+
+    <main>
+        <img style="margin-top: 100px; margin-left: 30px;"src="bilde/bilde10.png" height="300" width="300">
+      <div class="grid-container">
+
+
+
+
+        <p style=" margin-top: 100px; max-width: 300px; margin-left: 100px; margin-right: 300px; background-color: whitesmoke; z-index: 5; box-shadow: 3px 3px 2px 2px lightgray; padding: 10px;">
+Datamaskina er eit nyttig vertøy ein kan bruke til mange ulike oppgaver, men veit du kva den er samansett av?
+I ei datamskin  finn vi følgande delar: Hovudkort som vert brukt som eit slaks sentrum for datamskina, som kople saman alle komponentane i pcen.
+Harddisk som vert brukt som lagringsplass til foreksempel operativsystemet, og andre program og datafiler. har som regel stor lagringsplass.
+Nettverkskort som kommuniserer med andre datamaskiner via Wi-Fi, eller kabel.
+Grafikkort som vert brukt til å sette saman og tolke bilder og videoer og viser dei på skjermen.
+USB-port som er ein ingang det er mulig å kople til andre digitale hardwareverktøy.
+Minnebrikke/RAM som vert brukt til lagringsplass til programma du skal bruke ofte.
+Prosessor/CPU vert brukt til å tolke kodane i eit dataprogram.
+        </p>
+      </div>
+    </main>
+
+    <footer></footer>
 
   </body>
 </html>
