--- a/it3.html
+++ b/it3.html
@@ -2,10 +2,45 @@
 <html lang="no" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>per på tur</title>
+    <title>Teiknsett</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>
+<body>
+
+
+    <header>
+
+      <div class="" style="display: flex; flex-direction: row;">
+
+        <h1><img src="bilde/logo.png" alt="" width="120" height="120" style=""> Datateknologi</h1>
+      </div>
+      <div class="links">
+        <a href="index.html">Hjem</a>
+        <a href="it4.html">Binære tal</a>
+        <a href="it3.html">Teiknsett</a>
+        <a href="it2.html">Datamaskina</a>
+      </div>
+    </header>
+
+    <main>
+        <img style="margin-top: 100px; margin-left: 30px;"src="bilde/utf8.png" height="200" width="400">
+      <div class="grid-container">
+
+
+
+
+        <p style=" margin-top: 100px; max-width: 300px; margin-left: 100px; margin-right: 300px; background-color: whitesmoke; z-index: 5; box-shadow: 3px 3px 2px 2px lightgray; padding: 10px;">
+Teiknsettet i ei datamaskin bestemmer korleis alle teikn som kan skrivast skal sjå ut på skjermen,
+alt frå tal, bokstavar, og alle andre teikn. Den kombinerar, og bryt ner kode som består av 0 og 1.
+Alle teikn og alle bokstavar og tal har kvar sin spesifike kode. I dag er det vanleg å bruke Unicode,
+men før var det ASCII. Grunnet til at me for det meste bruker Unicode i staden for ASCII, er fordi ASCII hadde kun 7 bit
+som gav 128 mogelege kombinasjonar, men når google lagde Unicode fekk vi 8 bit som gjev 256 mogelegheitar. det vart laga for å få med
+fleire bokstavar som Æ, Ø, og Å.    
+          </p>
+      </div>
+    </main>
+
+    <footer></footer>
 
   </body>
 </html>
