--- a/it4.html
+++ b/it4.html
@@ -2,10 +2,39 @@
 <html lang="no" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>lars på tur</title>
+    <title>Binære tal</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>
+<body>
+
+
+    <header>
+
+      <div class="" style="display: flex; flex-direction: row;">
+
+        <h1><img src="bilde/logo.png" alt="" width="120" height="120" style=""> Datateknologi</h1>
+      </div>
+      <div class="links">
+        <a href="index.html">Hjem</a>
+        <a href="it4.html">Binære tal</a>
+        <a href="it3.html">Teiknsett</a>
+        <a href="it2.html">Datamaskina</a>
+      </div>
+    </header>
+
+    <main>
+        <img style="margin-top: 100px; margin-left: 30px;"src="bilde/bilde6.jpg" height="200" width="400">
+      <div class="grid-container">
+
+
+
+
+        <p style=" margin-top: 100px; max-width: 300px; margin-left: 100px; margin-right: 300px; background-color: whitesmoke; z-index: 5; box-shadow: 3px 3px 2px 2px lightgray; padding: 10px;">
+      </p>
+      </div>
+    </main>
+
+    <footer></footer>
 
   </body>
 </html>
