--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           Det er praktisk å vita kva som eigentleg skjer inne i datamaskinar.
           Kva delar som er inne i ein pc og kva som eigentleg skjer der inne.
           På denne nettsida skal eg lære deg litt om kva som skjer inne i datamaskinar.</p>
-          <audio src="lyd/it1.m4a"autoplay controls></audio>
+          <audio src="lyd/it1.m4a" controls></audio>
 
           </audio>
 
